# pycsvrewrite

./: .gitignore  README.md  csvrewrite.py  pyproject.toml  setup.py
test/: rainbow.csv  rainbow.tsv  test.sh
